--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
+        "php": ">=7.0.0",
         "guzzle/guzzle": "^3.9"
     },
     "minimum-stability": "dev",
