--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "guzzle/guzzle": "^3.9"
+        "guzzle/guzzle": "^3.9",
+        "ext-curl": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -27,5 +28,10 @@
         "branch-alias": {
             "dev-master": "0.0.x-dev"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0",
+        "mockery/mockery": "^0.9",
+        "satooshi/php-coveralls": "^2.0"
     }
 }
